# Source2Gen

./: .gitignore  CMakeLists.txt  README.md
GeneratedExample_OSX_x86_64/: !GlobalTypes_classes.hpp  !GlobalTypes_enums.hpp  libclient.dylib_classes.hpp  libserver.dylib_classes.hpp  libworldrenderer.dylib_classes.hpp
Source2Gen/: DllMain.cpp  SchemaClassGenerator.cpp  SchemaEnumGenerator.cpp  Source2Gen.cpp
Source2Gen/shared/: Address.hpp  Interface.hpp  Schema.cpp  Schema.hpp  SchemaList.hpp  SchemaSystem.cpp  SchemaSystem.hpp  SchemaUtil.cpp  UnknownType.hpp
